other-vpol/block-pod-exec-by-namespace/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: block-pod-exec-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: pci
