other-vpol/block-pod-exec-by-namespace/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: block-pod-exec-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: pci
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: pci
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    command: ["sleep", "3600"]
  - name: busybox02
    image: busybox:1.35
    command: ["sleep", "3600"]
