other-vpol/block-pod-exec-by-namespace/.chainsaw-test/policy-exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: pci-exec-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - kind: ValidatingPolicy
    name: deny-exec-by-namespace-name
  matchConditions:
  - name: target-namespace
    expression: request.namespace == 'pci'
  - name: target-name
    expression: request.name == 'pod02'
  - name: target-operation
    expression: request.operation == 'CONNECT' && request.subResource == 'exec'
  allowedValues:
  - pod:pci/pod02
