other-vpol/block-pod-exec-by-namespace/block-pod-exec-by-namespace.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-exec-by-namespace-name
  annotations:
    policies.kyverno.io/title: Block Pod Exec by Namespace Name
    policies.kyverno.io/category: Sample
    policies.kyverno.io/minversion: 1.17.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The `exec` command may be used to gain shell access, or run other commands, in a Pod's container. While this can
      be useful for troubleshooting purposes, it could represent an attack vector and is discouraged.
      This policy blocks Pod exec commands to Pods in a Namespace called `pci`.
spec:
  evaluation:
    background:
      enabled: true
  validationActions: ["Deny"]
  matchConstraints:
    resourceRules:
      - resources: ["pods/exec"]
        operations: ["CONNECT"]
        apiGroups: [""]
        apiVersions: ["v1"]
  validations:
    - message: >
        Pods in this namespace may not be exec'd into.
      expression: >
        request.namespace != "pci"
